[package]
name = "proctitle"
version = "0.1.0"
authors = ["Thomas Hurst <tom@hur.st>"]
edition = "2018"

[target."cfg(linux)".dependencies]
libc = "0.2.51"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["synchapi", "winnt", "handleapi"] }

[dependencies]
lazy_static = "1.3.0"
